--- a/style.css
+++ b/style.css
@@ -61,8 +61,9 @@ h1 {
 }
 #logo {
     color: #f08804;
-    font-size: 30px;
+    font-size: 20px;
     font-family: cursive;
+    text-align: left;
 }
 
 a {
